--- a/hours.html
+++ b/hours.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <h1>Little Taco Shop Hours</h1>
-        <nav>
+        <nav aria-label="Main navigation menu with links to Home, About Little Taco Shop (LTS), Our Menu, and Contact Us">
             <ul>
                 <li>
                     <a href="index.html">Home</a>
