--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 <body>
     <header>
         <h1>Welcome to The Little Taco Shop</h1>
-        <nav>
+        <nav
+            aria-label="Main navigation menu with links to About Little Taco Shop (LTS), Our Menu, Store Hours, and Contact Us">
             <ul>
                 <li>
                     <a href="#about">About LTS</a>
